--- a/css/app.css
+++ b/css/app.css
@@ -81,6 +81,14 @@ h1 {
     font-size: 33px;
 }
 
+.deck .card.unmatched {
+    animation-name: pulse;
+    -webkit-backface-visibility: visible !important;
+    backface-visibility: visible !important;
+    animation-duration: .75s;
+    background: #e2043b;
+}
+
 /*
  * Styles for the Score Panel
  */
