--- a/css/app.css
+++ b/css/app.css
@@ -89,6 +89,11 @@ h1 {
     background: #e2043b;
 }
 
+.deck .card.disabled {
+    pointer-events: none;
+    opacity: 0.9;
+}
+
 /*
  * Styles for the Score Panel
  */
